# ALPHpaca

./: README.md  package-lock.json
.github/workflows/: node.js.yml
alphpaca/: .env  .eslintrc.json  .gitignore  .project.json  alephium.config.ts  bun.lockb  package-lock.json  package.json
alphpaca/artifacts/: .deployments.mainnet.json  .deployments.testnet.json  BurnToken.ral.json  CreateToken.ral.json  Faucet.ral.json  FeeCollection.ral.json  Token.ral.json
alphpaca/artifacts/nft/: NFT.ral.json
alphpaca/artifacts/scripts/: Buildtoken.ral.json  Buildtokenpaca.ral.json  CreateOpenCollection.ral.json  CreateOpenCollectionWithRoyalty.ral.json  CreatePublicSaleCollectionSequential.ral.json  CreatePublicSaleCollectionSequentialWithRoyalty.ral.json  Destroy.ral.json  Destroytoken.ral.json  Editfee.ral.json  Gettoken.ral.json  MintBatchSequential.ral.json  MintNextSequential.ral.json  MintOpenNFT.ral.json  Sendout.ral.json  (+6 more)
alphpaca/contracts/: burn.ral  create_token.ral  paca_faucet.ral  swapoffer.ral  test_fees.ral  token.ral  tokenswap.ral
alphpaca/scripts/: 0_faucet.ts  1_token.ts  1_token_create.ts  2_burn.ts  2_token_create.ts  3_burn.ts  3_template_swap.ts  3_testfees.ts  4_swapoffers.ts  5_deploy_collection_template.ts
metapaca/: bun.lockb  package.json
metapaca/src-tauri/: Cargo.toml  tauri.conf.json
rustypaca/: .gitignore  Cargo.toml
rustypaca/src/: main.rs
sdk-playground/: .gitignore  package-lock.json  package.json
sdk-playground/src/: playground.js  playground.ts
token-verification/: .gitignore  bun.lockb  package-lock.json  package.json
(+78 files in other folders)
