[package]
name = "rustypaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }

# enables a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# enables high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3


